fix: harden migration assignment alignment